Increase min height of popover to prevent horizontal scrollbar from showing its ugly face

--- a/less/_popovers.less
+++ b/less/_popovers.less
@@ -4,7 +4,7 @@
 .popover {
 	-webkit-border-image: @popover-background 25 25 25 25 !important;
 	border-width: 25px !important;
-	min-height: 64px !important;
+	min-height: 66px !important;
 
 	.arrow {
 		background-image: @popover-arrow !important;
